--- a/index.html
+++ b/index.html
@@ -1,28 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Advice generator app</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            bg: {
+              DEFAULT: 'hsl(218, 23%, 16%)',
+              card: 'hsl(217, 19%, 24%)',
+              qoutetext: 'hsl(193, 38%, 86%)',
+              green: 'hsl(150, 100%, 66%)',
+            },
+            clifford: '#da373d',
+          }
+        },
+        fontFamily: {
+          'manrope': ['"Manrope"'],
+        }
+      }
+    }
+  </script>
 </head>
+
 <body>
+  <div class="grid h-screen place-items-center bg-bg">
+    <div class="grid grid-rows-1 rounded-lg gap-6 bg-bg-card pb-12  px-10">
+      <div class="flex justify-center gap-2 pt-6 text-bg-green">
+        <span>Advice</span>
+        <span id="qoute_id">177</span>
+      </div>
+      <div class="flex justify-center text-center max-w-md text-bg-qoutetext">
+        <h1 class="font-manrope text-[1.75rem]" id="qoute">Loading...</h1>
+      </div>
+      <div class="flex justify-center -mb-4 mt-2">
+        <img src="./images/pattern-divider-desktop.svg" alt="pattern-divider">
+      </div>
+      <div class="flex justify-center relative -mb-[4.5rem] mt-6">
 
-  Advice #<!-- Advice ID goes here -->
+        <button class="flex justify-center relative max-w-fit bg-bg-green p-3 rounded-full group" id="button">
+          <div class="absolute inset-0 bg-bg-green rounded-full w-12 group-hover:blur"></div>
+          <img class=" z-10" src="./images/icon-dice.svg" alt="icon-dice">
+        </button>
 
-  "<!-- Advice text goes here -->"
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+      </div>
+    </div>
   </div>
+
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/NoufelLalmi" target="_blank">Noufel Lalmi</a>.
+  </div>
+  <script src="./qoute.js"></script>
+
 </body>
+
 </html>
