fix button padding

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
       </div>
       <div class="flex justify-center relative -mb-[4.5rem] mt-6">
 
-        <button class="flex justify-center relative max-w-fit bg-bg-green p-3 rounded-full group" id="button">
-          <div class="absolute inset-0 bg-bg-green rounded-full w-12 group-hover:blur"></div>
-          <img class=" z-10" src="./images/icon-dice.svg" alt="icon-dice">
+        <button class="flex justify-center relative max-w-fit bg-bg-green p-4 rounded-full group" id="button">
+          <div class="absolute inset-0 bg-bg-green rounded-full group-hover:blur"></div>
+          <img class="z-10" src="./images/icon-dice.svg" alt="icon-dice">
         </button>
 
       </div>
